@@ -12,7 +12,7 @@
 	},
     "radio":{
         "command": "rtl_fm -f 169.65M -M fm -s 22050 | multimon-ng -q -a FLEX -t raw /dev/stdin",
-        "triggertime": 0.03
+        "triggertime": 0.05
 	},
 	"api":{
 		"endpoint": "",
